[gd_scene load_steps=36 format=2]

[ext_resource path="res://Nivell 3/Screenshot_1.jpg" type="Texture" id=1]
[ext_resource path="res://Nivell 3/underwater1.png" type="Texture" id=2]
[ext_resource path="res://Nivell 3/sky.png" type="Texture" id=3]
[ext_resource path="res://Corrent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Corrent d'aigua.gd" type="Script" id=5]
[ext_resource path="res://Nivell 3.gd" type="Script" id=6]
[ext_resource path="res://Test.tscn" type="PackedScene" id=7]
[ext_resource path="res://Portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_08.png" type="Texture" id=9]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_13.png" type="Texture" id=10]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_02.png" type="Texture" id=11]
[ext_resource path="res://Nivell 3/Tilemap.png" type="Texture" id=12]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_11.png" type="Texture" id=13]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_06.png" type="Texture" id=14]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_12.png" type="Texture" id=15]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_10.png" type="Texture" id=16]
[ext_resource path="res://Nivell 3/PNG/Platformer/Ground_04.png" type="Texture" id=17]
[ext_resource path="res://Nivell 3/3_game_background/layers/4.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31605.8, 1389.16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34323.2, 130.838 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 128, 128, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( -1, 1, 71, 2, 74, 17, 86, 26, 87, 52, 94, 65, 91, 97, 79, 106, 78, 127, 1, 129 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 125, 1, 124, 129, 42, 124, 35, 93, 8, 65, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 1.40015, 127, -0.599854, 3, 121.4, 2, 122.4, 55, 77.4001, 127 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 93, 1, 93, 128, 22, 128, 20, 106, 4, 95, 1, 67, 12, 53, 11, 25, 20, 16, 20, 1 )

[sub_resource type="TileSet" id=17]
0/name = "Tilemap.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Tilemap.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Tilemap.png 2"
2/texture = ExtResource( 12 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 512, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 9 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Tilemap.png 3"
3/texture = ExtResource( 12 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 768, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 10 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Tilemap.png 4"
4/texture = ExtResource( 12 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1280, 0, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 11 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "Tilemap.png 5"
5/texture = ExtResource( 12 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1024, 0, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 12 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Tilemap.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 1536, 0, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 13 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Tilemap.png 7"
7/texture = ExtResource( 12 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1792, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 14 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Tilemap.png 8"
8/texture = ExtResource( 12 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 2048, 0, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 15 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Tilemap.png 9"
9/texture = ExtResource( 12 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 2304, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 16 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Tilemap.png 10"
10/texture = ExtResource( 12 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 2560, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 6 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Tilemap.png 11"
11/texture = ExtResource( 12 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 2816, 0, 128, 128 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 7 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "Tilemap.png 12"
12/texture = ExtResource( 12 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 3072, 0, 128, 128 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 8 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "Tilemap.png 13"
13/texture = ExtResource( 12 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 3328, 0, 128, 128 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0

[node name="Nivell 3" type="Node2D"]
script = ExtResource( 6 )

[node name="TickDmg" type="Timer" parent="."]
wait_time = 0.5

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="Aigua" type="Area2D" parent="."]

[node name="AiguaCel" type="Sprite" parent="Aigua"]
position = Vector2( -0.841064, -0.840912 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( -3.48401, 0, 63333.1, 1079.67 )

[node name="Cel" type="Sprite" parent="Aigua"]
position = Vector2( -187.73, -1061.85 )
rotation = 3.14159
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -2225.77, 0, 64169.2, 1084.02 )

[node name="Aigua" type="Sprite" parent="Aigua"]
position = Vector2( -5.94534, 1476.13 )
scale = Vector2( 68.1764, 15.4456 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 939.442, 136.492 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aigua"]
position = Vector2( 0, 1132.72 )
shape = SubResource( 1 )

[node name="Corrent d\'aigua" type="Node2D" parent="."]
position = Vector2( 23.9727, 791.106 )
script = ExtResource( 5 )

[node name="Corrent 1" parent="Corrent d\'aigua" instance=ExtResource( 4 )]
position = Vector2( -1386.46, -1669.15 )

[node name="Corrent 2" parent="Corrent d\'aigua" instance=ExtResource( 4 )]
position = Vector2( 1263.57, -461.156 )

[node name="Corrent 3" parent="Corrent d\'aigua" instance=ExtResource( 4 )]
position = Vector2( 534.792, -1049.08 )

[node name="Terra" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Terra" type="Sprite" parent="Terra"]
position = Vector2( 11188.2, 2162.98 )
texture = ExtResource( 18 )
region_enabled = true
region_rect = Rect2( -15078, 643, 26834, 427 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terra"]
position = Vector2( 205.832, 2262.93 )
shape = SubResource( 2 )

[node name="Test" parent="." instance=ExtResource( 7 )]
position = Vector2( -2386.46, -538.217 )

[node name="Portal" parent="." instance=ExtResource( 8 )]
position = Vector2( -2585.96, -588.428 )
scale = Vector2( 8, 8 )

[node name="Construccio" type="TileMap" parent="."]
tile_set = SubResource( 17 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -393262, 13, 0, -393261, 13, 0, -393260, 13, 0, -393259, 13, 0, -393258, 13, 0, -393257, 13, 0, -393256, 13, 0, -327726, 13, 0, -327725, 13, 0, -327724, 13, 0, -327723, 13, 0, -327722, 13, 0, -327721, 13, 0, -327720, 13, 0, -327719, 13, 0, -327718, 13, 0, -327717, 13, 0, -262184, 13, 0, -196650, 13, 0, -196649, 13, 0, -196648, 13, 0, -196647, 13, 0, -196646, 13, 0, -131114, 13, 0, -131113, 13, 0, -131112, 13, 0, -131111, 13, 0, -131095, 13, 0, -131094, 13, 0, -131093, 13, 0, -131092, 13, 0, -65574, 13, 0, -38, 13, 0, -37, 13, 0, -36, 13, 0, 65498, 13, 0, 65499, 13, 0, 65500, 13, 0, 131034, 13, 0, 131035, 13, 0, 196570, 13, 0, 262106, 13, 0, 327642, 13, 0, 393178, 13, 0, 458714, 13, 0, 524250, 13, 0, 589786, 13, 0, 655322, 13, 0, 720858, 13, 0, 786393, 13, 0, 786394, 13, 0, 851929, 13, 0, 851930, 13, 0, 917465, 13, 0, 917466, 13, 0, 983001, 13, 0, 983002, 13, 0, 983003, 13, 0, 1048537, 13, 0, 1048538, 13, 0, 1048539, 13, 0, 1114072, 13, 0, 1114073, 13, 0, 1114074, 13, 0, 1114075, 13, 0, 1179608, 13, 0, 1179610, 13, 0, 1179611, 13, 0, 1245144, 13, 0, 1245146, 13, 0, 1245147, 13, 0, 1310680, 13, 0, 1310681, 13, 0, 1310682, 13, 0, 1310683, 13, 0, 1376215, 13, 0, 1376216, 13, 0, 1376217, 13, 0, 1376218, 13, 0, 1376219, 13, 0, 1441751, 13, 0, 1441753, 13, 0, 1441754, 13, 0, 1441755, 13, 0, 1507289, 13, 0, 1507290, 13, 0, 1507291, 13, 0, 1572825, 13, 0, 1572826, 13, 0, 1572827, 13, 0, 1638361, 13, 0, 1638362, 13, 0, 1638363, 13, 0, 1703897, 13, 0, 1703898, 13, 0, 1703899, 13, 0, 1769433, 13, 0, 1769434, 13, 0, 1769435, 13, 0, 1834969, 13, 0, 1834970, 13, 0, 1900505, 13, 0, 1900506, 13, 0, 1966040, 13, 0, 1966041, 13, 0, 1966042, 13, 0, 2031576, 13, 0, 2031577, 13, 0, 2031578, 13, 0, 2097112, 13, 0, 2097113, 13, 0, 2097114, 13, 0, 2162648, 13, 0, 2162649, 13, 0, 2162650, 13, 0, 2228185, 13, 0, 2228186, 13, 0, 2293721, 13, 0, 2293722, 13, 0, 2293723, 13, 0, 2359258, 13, 0, 2359259, 13, 0, 2424794, 13, 0, 2424795, 13, 0, 2490330, 13, 0, 2490331, 13, 0, 2555866, 13, 0, 2555867, 13, 0, 2621402, 13, 0, 2621403, 13, 0, 2686939, 13, 0, 2752475, 13, 0 )

[node name="Ground_09" type="Sprite" parent="Construccio"]
position = Vector2( -2819.16, 1340.45 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( -66, -865, 1035, 3212 )

[node name="Ground_13" type="Sprite" parent="Construccio"]
position = Vector2( -2254.23, 1462.3 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, -1776, 116.992, 3439 )

[node name="Ground_08" type="Sprite" parent="Construccio"]
position = Vector2( -2246, -321 )
texture = ExtResource( 9 )

[node name="Ground_14" type="Sprite" parent="Construccio"]
position = Vector2( -3371.19, 1461.61 )
texture = ExtResource( 10 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, -1776, 116.992, 3439 )

[node name="Ground_07" type="Sprite" parent="Construccio"]
position = Vector2( -2371, -321 )
texture = ExtResource( 11 )

[node name="Ground_06" type="Sprite" parent="Construccio"]
position = Vector2( -3380.52, -319.536 )
texture = ExtResource( 17 )

[node name="Ground_10" type="Sprite" parent="Construccio"]
position = Vector2( -3255.79, -319.137 )
texture = ExtResource( 16 )

[node name="Ground_11" type="Sprite" parent="Construccio"]
position = Vector2( -3130.68, -319.137 )
texture = ExtResource( 13 )

[node name="Ground_12" type="Sprite" parent="Construccio"]
position = Vector2( -3002.94, -319.537 )
texture = ExtResource( 15 )

[node name="Ground_05" type="Sprite" parent="Construccio"]
position = Vector2( -2876.41, -319.787 )
texture = ExtResource( 11 )

[node name="Ground_02" type="Sprite" parent="Construccio"]
position = Vector2( -2623.65, -320.627 )
texture = ExtResource( 11 )

[node name="Ground_03" type="Sprite" parent="Construccio"]
position = Vector2( -2496.26, -320.627 )
texture = ExtResource( 11 )

[node name="Ground_04" type="Sprite" parent="Construccio"]
position = Vector2( -2749.58, -320.212 )
texture = ExtResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="Construccio"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Construccio/StaticBody2D"]

[node name="Ground_11" type="Sprite" parent="Construccio/StaticBody2D"]
position = Vector2( 3436.46, -146.081 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 0, 3, 957, 127 )
[connection signal="timeout" from="TickDmg" to="." method="_on_TickDmg_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Aigua" to="." method="_on_Aigua2_body_entered"]
[connection signal="body_exited" from="Aigua" to="." method="_on_Aigua2_body_exited"]
[connection signal="body_entered" from="Corrent d'aigua/Corrent 1" to="Corrent d'aigua" method="_on_Corrent_1_body_entered"]
[connection signal="body_entered" from="Corrent d'aigua/Corrent 2" to="Corrent d'aigua" method="_on_Corrent_2_body_entered"]
[connection signal="body_entered" from="Corrent d'aigua/Corrent 3" to="Corrent d'aigua" method="_on_Corrent_3_body_entered"]
